fix baseurl bug

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yige Chen"
 title_separator          : "-"
 name                     : &name "Yige Chen"
 description              : &description "personal description"
-url                      : http://192.168.1.3 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ychen.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yige-chen/yige-chen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
