add networking conference statistics

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ title_separator          : "-"
 name                     : &name "Yige Chen"
 description              : &description "personal description"
 url                      : https://ychen.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#url                      : http://192.168.110.79 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yigechen1/yigechen1.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
