change the website title of the conference statistics

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /#research
   - title: "Publication"
     url: /#publication
-  - title: "Networking Conference Statistic"
+  - title: "Networking Conference Statistics"
     url: /conf-stat
 #  - title: "CV"
 #    url: /files/cv.pdf
