--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yige Chen"
 title_separator          : "-"
 name                     : &name "Yige Chen"
 description              : &description "personal description"
-url                      : https://ychen.info # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yigechen1.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 #url                      : http://192.168.110.79 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yigechen1/yigechen1.github.io"
