--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ analytics:
 author:
   name             : "Yige Chen (陈一阁)"
   avatar           : "profile_new.png"
-  bio              : "Ph.D. candidate at Institute of Information Engineering, Chinese Academy of Sciences"
-  location         : "Beijing, China"
+  bio              : "Lecturer at College of Computer Science and Artificial Intelligence, Wenzhou University"
+  location         : "Wenzhou, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=WBO8MpQAAAAJ&hl=en"
